--- a/Lab 204 - Art Three OP/My Code/index.html
+++ b/Lab 204 - Art Three OP/My Code/index.html
@@ -8,7 +8,7 @@
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
     <script src="firework.js" type="text/javascript"></script>
-    
+    <script src="particle.js" type="text/javascript"></script>
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
   </head>
 
